--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Форма взаимодействия с сервером</h1>
-    <form method="POST" action="/submit">
+    <form method="POST" action="submit.php">
         <label for="name">Имя:</label>
         <input type="text" id="name" name="name"><br><br>
         <label for="email">Email:</label>
